refactor: sovle the Q1~Q6 Prolbem again